simplify docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "2"
 services:
     service-a:
         build: ./service-a
-        expose:
-            - "80"
+        ports:
+            - "8080:80"
         depends_on:
             - service-b
             - mycache
