--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,15 @@ services:
         depends_on:
             - service-b
             - mycache
-        # labels:
-        #     com.microsoft.acs.dcos.marathon.healthcheck.path: '/'
+        labels:
+            com.microsoft.acs.dcos.marathon.healthcheck.path: '/'
 
     service-b:
         build: ./service-b
         expose:
             - "80"
-        # labels:
-        #     com.microsoft.acs.dcos.marathon.healthcheck.path: '/'
+        labels:
+            com.microsoft.acs.dcos.marathon.healthcheck.path: '/'
 
     mycache:
         image: redis:alpine
